Fix style and add options to flink-console.sh